Updated the Metatags

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>C-13 Payment</title>
+    <!-- Primary Meta Tags -->
+    <title>C-13 PAYMENT INTEGRATION</title>
+    <meta name="title" content="C-13 PAYMENT INTEGRATION" />
+    <meta
+      name="description"
+      content="Trying As Much Hard To Offer You An Ease, Understandable And Readable Docs For Setting Up LIPA NA M-PESA STK PUSH"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="/vite.svg" />
+    <meta property="og:title" content="C-13 PAYMENT INTEGRATION" />
+    <meta
+      property="og:description"
+      content="Trying As Much Hard To Offer You An Ease, Understandable And Readable Docs For Setting Up LIPA NA M-PESA STK PUSH"
+    />
+    <meta
+      property="og:image"
+      content="/vite.svg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="/vite.svg" />
+    <meta property="twitter:title" content="C-13 PAYMENT INTEGRATION" />
+    <meta
+      property="twitter:description"
+      content="Trying As Much Hard To Offer You An Ease, Understandable And Readable Docs For Setting Up LIPA NA M-PESA STK PUSH"
+    />
+    <meta
+      property="twitter:image"
+      content="/vite.svg"
+    />
   </head>
   <body>
     <div id="root"></div>
